--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -36,12 +36,12 @@
     </div>
   {{else}}
     <div class="row d-flex align-items-center p-2 bg-grey-2 rounded encryptable-entry">
-      <LinkTo class="col-4 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
+      <LinkTo id="encryptable-row-title" class="col-4 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
         {{@encryptable.name}}
       </LinkTo>
       {{#unless (gt getAttributesAmount 2)}}
          {{#if @encryptable.usedAttrs.username}}
-            <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
+            <div id="username-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
               <div class="hide-wrapper">
                 <Input class="d-inline form-control" id="input-password-{{@encryptable.id}}" @disabled="true" @value={{format-cleartext @encryptable "username"}}/>
                 <a role="button"
@@ -62,7 +62,7 @@
             </div>
          {{/if}}
          {{#if @encryptable.usedAttrs.email}}
-           <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
+           <div id="email-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
              <div class="hide-wrapper">
                <Input class="d-inline form-control" id="input-password-{{@encryptable.id}}" @disabled="true" @value={{format-cleartext @encryptable "email"}}/>
                <a role="button"
@@ -83,7 +83,7 @@
            </div>
         {{/if}}
          {{#if @encryptable.usedAttrs.password}}
-            <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
+            <div id="password-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
               <div class="hide-wrapper">
                 <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "password"}}/>
                 <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPasswordVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "password")}}>{{t "encryptable/credentials.show.show_password"}}</a>
@@ -100,7 +100,7 @@
             </div>
          {{/if}}
          {{#if @encryptable.usedAttrs.token}}
-           <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
+           <div id="token-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
              <div class="hide-wrapper">
                <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "token"}}/>
                <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isTokenVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "token")}}>{{t "encryptable/credentials.show.show_token"}}</a>
@@ -117,7 +117,7 @@
            </div>
          {{/if}}
          {{#if @encryptable.usedAttrs.pin}}
-            <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
+            <div id="pin-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
               <div class="hide-wrapper">
                 <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "pin"}}/>
                 <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPinVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "pin")}}>{{t "encryptable/credentials.show.show_pin"}}</a>
@@ -134,7 +134,7 @@
             </div>
          {{/if}}
          {{#if @encryptable.usedAttrs.custom_attr}}
-           <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
+           <div id="custom-attr-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
              <div class="hide-wrapper">
                <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "customAttr"}}/>
                <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isCustomAttrVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "customAttr")}}>{{t "encryptable/credentials.show.show_custom_attr"}}</a>
