fix file upload button size

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -204,6 +204,10 @@ li a {
   }
 }
 
+.file-upload-button {
+  width: 17% !important;
+}
+
 .icon-button {
   width: 18px !important;
   height: 18px !important;
