--- a/frontend/app/templates/components/encryptable-file/form.hbs
+++ b/frontend/app/templates/components/encryptable-file/form.hbs
@@ -27,7 +27,7 @@
                             @multiple={{false}}
                             @onfileadd={{this.uploadFile}}
                             @ondrop={{this.uploadFile}}
-                            class="btn btn-primary">
+                            class="btn btn-primary file-upload-button">
                   <a id="upload-file" tabindex="0">{{t (if this.changeset.file "encryptable_files.new.reupload" "encryptable_files.new.upload_file")}}</a>
                 </FileUpload>
               </div>
